@@ -1,13 +1,0 @@
-<?xml version="1.0"?>
-<paper>
-  <page name="Letter" height="21.59" width="27.94"/>
-  <page name="Legal" height="35.56" width="21.59"/>
-  <page name="A3" height="42.0" width="29.7"/>
-  <page name="A4" height="29.7" width="21.0"/>
-  <page name="A5" height="21.0" width="14.8"/>
-  <page name="B4" height="35.3" width="25.0"/>
-  <page name="B6" height="17.6" width="12.5"/>
-  <page name="C4" height="32.4" width="22.9"/>
-  <page name="C5" height="22.9" width="16.2"/>
-  <page name="C6" height="16.2" width="11.4"/>
-</paper>
